tests/macro-tests/cases/hot_node/invalid_input_pattern.stderr
error: hot node input can only have a simple ident
 --> cases/hot_node/invalid_input_pattern.rs:6:45
  |
6 | pub fn invalid_destruct(child: impl IntoUiNode, (a, b): (bool, u8)) -> UiNode {
  |                                             ^^^^^^
